erDiagram
    tenants {
        UUID id PK
        TEXT name
        TEXT description
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    companies {
        UUID id PK
        UUID tenant_id FK
        TEXT name
        TEXT description
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    
    company_profiles {
        UUID id PK
        UUID company_id FK
        TEXT name
        TEXT description
        TEXT contact_email
        TEXT contact_phone
        TEXT address
        TEXT city
        TEXT state
        TEXT zip_code
        TEXT country
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    
    user_profiles {
        UUID id PK
        UUID user_id FK
        TEXT first_name
        TEXT last_name
        DATE date_of_birth
        VARCHAR gender
        TEXT phone_number
        TEXT profile_picture_url
        UUID company_id FK
        TEXT address
        TEXT city
        TEXT state
        TEXT zip_code
        TEXT country
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    
    users {
        UUID id PK
        UUID tenant_id FK
        UUID company_id FK
        UUID user_profile_id FK
        TEXT email
        TEXT password_hash
        ENUM status
        BOOLEAN is_active
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    
    user_tenant_context_roles {
        UUID id PK
        UUID user_id FK
        ENUM role
        UUID tenant_id FK
        UUID company_id FK
        TIMESTAMPTZ created_at
    }
    
    ohs_specialist_company_assignments {
        UUID id PK
        UUID ohs_specialist_user_id FK
        UUID company_id FK
        UUID tenant_id FK
        TIMESTAMPTZ created_at
    }
    
    doctor_company_assignments {
        UUID id PK
        UUID doctor_user_id FK
        UUID company_id FK
        UUID tenant_id FK
        TIMESTAMPTZ created_at
    }
    
    professional_availabilities {
        UUID id PK
        UUID professional_user_id FK
        UUID tenant_id FK
        TIMESTAMPTZ start_time
        TIMESTAMPTZ end_time
        TIMESTAMPTZ created_at
    }
    
    appointments {
        UUID id PK
        UUID tenant_id FK
        UUID company_id FK
        UUID employee_user_id FK
        UUID professional_user_id FK
        TIMESTAMPTZ start_time
        TIMESTAMPTZ end_time
        ENUM status
        TEXT reason_for_visit
        TEXT notes_by_professional
        TEXT call_session_id
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    
    training_sessions {
        UUID id PK
        UUID tenant_id FK
        UUID host_user_id FK
        TEXT title
        TEXT description
        TIMESTAMPTZ start_time
        TIMESTAMPTZ end_time
        JSONB stream_details
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    
    training_materials {
        UUID id PK
        UUID tenant_id FK
        UUID uploader_user_id FK
        UUID training_session_id FK
        TEXT title
        TEXT description
        TEXT file_url
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    
    training_enrollments {
        UUID id PK
        UUID tenant_id FK
        UUID training_session_id FK
        UUID employee_user_id FK
        UUID company_id FK
        TIMESTAMPTZ enrolled_at
        BOOLEAN attended
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    
    training_quizzes {
        UUID id PK
        UUID tenant_id FK
        UUID training_session_id FK
        TEXT title
        UUID created_by_user_id FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    
    quiz_questions {
        UUID id PK
        UUID quiz_id FK
        UUID tenant_id FK
        TEXT question_text
        TEXT question_type
        JSONB options
        TEXT correct_answer_key
        INTEGER points
        TIMESTAMPTZ created_at
    }
    
    quiz_attempts {
        UUID id PK
        UUID quiz_id FK
        UUID tenant_id FK
        UUID employee_user_id FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    
    quiz_attempt_answers {
        UUID id PK
        UUID attempt_id FK
        UUID question_id FK
        UUID tenant_id FK
        TEXT answer_key
        TEXT answer_text
        BOOLEAN is_correct
        TIMESTAMPTZ submitted_at
    }
    
    safety_reports {
        UUID id PK
        UUID tenant_id FK
        UUID company_id FK
        UUID employee_user_id FK
        ENUM status
        ENUM priority
        TEXT description
        JSONB attachments
        UUID assigned_to_user_id FK
        TIMESTAMPTZ assigned_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    
    risk_analysis_templates {
        UUID id PK
        UUID tenant_id FK
        UUID creator_user_id FK
        TEXT name
        TEXT description
        JSONB structure_json
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    
    risk_analysis_checks {
        UUID id PK
        UUID tenant_id FK
        UUID company_id FK
        UUID template_id FK
        UUID checker_user_id FK
        ENUM status
        JSONB data_json
        NUMERIC overall_risk_score
        TEXT recommendations
        TIMESTAMPTZ checked_at
        TIMESTAMPTZ updated_at
    }
    
    notifications {
        UUID id PK
        UUID user_id FK
        UUID tenant_id FK
        ENUM notification_type
        TEXT title
        TEXT message
        UUID related_entity_id
        TEXT related_entity_type
        BOOLEAN is_read
        TIMESTAMPTZ read_at
        TIMESTAMPTZ created_at
    }
    
    call_logs {
        UUID id PK
        UUID tenant_id FK
        UUID appointment_id FK
        UUID initiator_user_id FK
        UUID receiver_user_id FK
        TIMESTAMPTZ start_time
        TIMESTAMPTZ end_time
        INTEGER duration_seconds
        JSONB mediasoup_session_info
        TIMESTAMPTZ created_at
    }
    
    system_settings {
        UUID id PK
        UUID tenant_id FK
        TEXT setting_key
        JSONB setting_value
        TEXT description
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    
    tenants ||--o{ companies : "has many"
    tenants ||--o{ users : "has many"
    tenants ||--o{ system_settings : "has one"
    
    companies ||--o{ company_profiles : "has one"
    companies ||--o{ users : "has many"
    companies ||--o{ user_profiles : "has many"
    companies ||--o{ ohs_specialist_company_assignments : "has many"
    companies ||--o{ doctor_company_assignments : "has many"
    companies ||--o{ appointments : "has many"
    companies ||--o{ training_enrollments : "has many"
    companies ||--o{ safety_reports : "has many"
    companies ||--o{ risk_analysis_checks : "has many"
    
    users ||--o{ user_profiles : "has one"
    users ||--o{ user_tenant_context_roles : "has many"
    users ||--o{ ohs_specialist_company_assignments : "assigned to"
    users ||--o{ doctor_company_assignments : "assigned to"
    users ||--o{ professional_availabilities : "has many"
    users ||--o{ appointments : "participates in"
    users ||--o{ training_sessions : "hosts"
    users ||--o{ training_materials : "uploads"
    users ||--o{ training_enrollments : "enrolls in"
    users ||--o{ training_quizzes : "creates"
    users ||--o{ quiz_attempts : "takes"
    users ||--o{ safety_reports : "reports"
    users ||--o{ safety_reports : "assigned to"
    users ||--o{ risk_analysis_templates : "creates"
    users ||--o{ risk_analysis_checks : "performs"
    users ||--o{ notifications : "receives"
    users ||--o{ call_logs : "participates in"
    
    user_profiles ||--|| users : "belongs to"
    
    appointments ||--o{ call_logs : "generates"
    
    training_sessions ||--o{ training_materials : "has many"
    training_sessions ||--o{ training_enrollments : "has many"
    training_sessions ||--o{ training_quizzes : "has many"
    
    training_quizzes ||--o{ quiz_questions : "has many"
    training_quizzes ||--o{ quiz_attempts : "has many"
    
    quiz_attempts ||--o{ quiz_attempt_answers : "has many"
    
    quiz_questions ||--o{ quiz_attempt_answers : "answered in"
    
    risk_analysis_templates ||--o{ risk_analysis_checks : "used in"
